--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -1,159 +1,240 @@
 .sec_profile {
-    background-color: #daede5;
-    padding: 53px 0 0;
+  background: url("../img/sec_1/bg/bg2.png"), url("../img/sec_1/bg/bg1.png");
+  background-size: cover;
+  padding: 133px 0 0;
+  background-position-y: 15%;
+
+  .my-pb-5 {
+    padding-bottom: 90px;
+  }
+
+  .my-header-btn {
+    a {
+      padding: 10px 45px;
+      color: #FFFFFF;
+      border-radius: 0;
+    }
+  }
+
+  h1 {
+    font-size: 36px;
+    text-transform: uppercase;
+    margin-bottom: 29px;
+  }
+
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1120px;
+    }
+  }
+
+  .undertitle {
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 130%;
+    text-transform: uppercase;
+    color: #828282;
+    margin-bottom: 38px;
+
+    i {
+      display: block;
+      margin-top: 44px;
+    }
+  }
+
+  .img_wrapp {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    img {
+      position: absolute;
+      bottom: 0;
+      width: 490px;
+      filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
+    }
+  }
+
+  .card {
+    padding: 25px 28px 23px 23px;
+    max-width: 561px;
+    margin-bottom: 58px;
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    li {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 153.59%;
+      display: flex;
+      align-items: flex-start;
+
+      &:not(:last-of-type) {
+        margin-bottom: 14px;
+      }
+
+      img {
+        width: 18px;
+        height: auto;
+        display: inline-block;
+        margin-top: 3px;
+        margin-right: 15px;
+      }
+
+      b {
+        font-size: 20px;
+      }
+    }
+  }
+
+  .works {
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 566px;
+    width: 100%;
+    margin-bottom: 52px;
+  }
+
+  // abs pic
+  .circle {
+    top: 47%;
+    left: 49%;
+    opacity: 0.4;
+  }
+
+  .dubl_line_vertical {
+    right: -8%;
+    top: 6%;
+  }
+}
+
+.sec_reason {
+  background-color: #242323;
+
+  h2 {
+    font-size: 28px;
+    color: #ffffff;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  .reason {
+    background-color: #F2F2F2;
+    height: 135px;
+    color: black;
+    font-weight: 600;
+    display: inline-block;
+    position: relative;
+    padding: 0 30px 0 130px;
+
+    &:nth-child(odd) {
+      margin-right: 25px;
+    }
+
+    &:nth-child(even) {
+      margin-left: 25px;
+    }
+
+    p {
+      display: inline-block;
+      vertical-align: center;
+      margin: 0;
+
+    }
+
+    img {
+      position: absolute;
+      left: 5px;
+      bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+
+  .sec_reason {
+    .reason {
+      height: 150px;
+      padding: 0 0 0 100px;
+
+      &:nth-child(odd) {
+        margin-right: 0;
+      }
+
+      &:nth-child(even) {
+        margin-left: 0;
+      }
+    }
+  }
+  .sec_profile {
+    padding: 23px 0 0;
     overflow: hidden;
 
+
     h1 {
-        font-size: 46px;
-        text-transform: uppercase;
-        margin-bottom: 29px;
+      font-size: 26px;
+      margin-bottom: 25px;
     }
-    @media (min-width: 1200px) {
-        .container {
-            max-width: 1120px;
-        }
+
+    .my-pb-5 {
+      padding-bottom: 0;
     }
 
     .undertitle {
-        font-weight: 600;
-        font-size: 21px;
-        line-height: 130%;
-        text-transform: uppercase;
-        color: #828282;
-        margin-bottom: 38px;
+      font-size: 16px;
 
-        i {
-            display: block;
-            margin-top: 44px;
-        }
-    }
-
-    .img_wrapp {
-        position: relative;
-        width: 100%;
-        height: 100%;
-
-        img {
-            position: absolute;
-            bottom: 0;
-            right: -40px;
-            width: 490px;
-            filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
-        }
+      i {
+        margin-top: 10px;
+      }
     }
 
     .card {
-        padding: 25px 28px 23px 23px;
-        max-width: 561px;
-        margin-bottom: 58px;
+      padding: 20px 15px;
+      margin-bottom: 40px;
 
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        li {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 153.59%;
-            display: flex;
-            align-items: flex-start;
-
-            &:not(:last-of-type) {
-                margin-bottom: 14px;
-            }
-
-            img {
-                width: 18px;
-                height: auto;
-                display: inline-block;
-                margin-top: 3px;
-                margin-right: 15px;
-            }
-
-            b {
-                font-size: 20px;
-            }
-        }
+      li {
+        font-size: 14px;
+      }
     }
 
     .works {
-        display: -webkit-flex;
-        display: -ms-flex;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        max-width: 566px;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      margin: 0;
+      padding: 0 15px;
+
+      img {
+        display: inline-block;
+        margin-bottom: 30px;
+        opacity: 0.7;
+      }
+    }
+
+
+
+    .img_wrapp {
+      height: 400px;
+
+      img {
         width: 100%;
-        margin-bottom: 52px;
-    }
-    // abs pic
-    .circle {
-        top: 47%;
-        left: 49%;
-        opacity: 0.4;
+        right: initial;
+        left: 50%;
+        transform: translateX(-50%);
+        max-width: 345px;
+      }
     }
 
+    // abs icons
     .dubl_line_vertical {
-        right: -8%;
-        top: 6%;
+      right: -2%;
+      top: 3%;
     }
-}
-@media (max-width: 767.98px) {
-    .sec_profile {
-        overflow: hidden;
-
-        h1 {
-            font-size: 32px;
-            margin-bottom: 25px;
-        }
-
-        .undertitle {
-            font-size: 16px;
-
-            i {
-                margin-top: 10px;
-            }
-        }
-
-        .card {
-            padding: 20px 15px;
-            margin-bottom: 40px;
-
-            li {
-                font-size: 14px;
-            }
-        }
-
-        .works {
-            align-items: flex-start;
-            flex-wrap: wrap;
-            margin: 0;
-            padding: 0 15px;
-
-            img {
-                display: inline-block;
-                margin-bottom: 30px;
-                opacity: 0.7;
-            }
-        }
-
-        .img_wrapp {
-            height: 400px;
-
-            img {
-                width: 100%;
-                right: initial;
-                left: 50%;
-                transform: translateX(-50%);
-                max-width: 345px;
-            }
-        }
-        // abs icons
-        .dubl_line_vertical {
-            right: -2%;
-            top: 3%;
-        }
-    }
+  }
 }
