--- a/sass/newland/_sec_about_course.scss
+++ b/sass/newland/_sec_about_course.scss
@@ -56,13 +56,25 @@
 
         p {
             font-weight: 500;
-            font-size: 14px;
+            font-size: 16px; 
             line-height: 160%;
             color: #828282;
             margin: 0;
 
             &:not(:last-of-type) {
                 margin-bottom: 30px;
+            }
+        }
+
+        ul {
+            padding-left: 18px;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 160%;
+            color: #828282;
+
+            li {
+                margin-bottom: 7px;
             }
         }
     }
