--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -167,7 +167,6 @@
             font-weight: bold;
             color: #4f4f4f;
             text-transform: uppercase;
-            margin-bottom: -25px;
         }
 
         .b-card-body {
@@ -177,16 +176,21 @@
             display: -ms-flex;
             display: flex;
             justify-content: space-between;
-            align-items: flex-end;
+            flex-direction: column;
             margin: 0;
 
             .right {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+
                 .label {
                     font-weight: 500;
                     font-size: 20px;
                     line-height: 130%;
                     color: #828282;
-                    margin-bottom: 9px;
+                    margin-right: 9px;
                 }
 
                 .price {
@@ -194,7 +198,12 @@
                     font-size: 30px;
                     line-height: 130%;
                     color: #58B58B;
-                    margin-bottom: 22px;
+
+                    @media (max-width: 767.98px) {
+                        margin-bottom: 20px;
+                        width: 100%;
+                        text-align: left;
+                    }
                 }
 
                 .btn-success {
@@ -203,6 +212,7 @@
                     line-height: 130%;
                     width: 294px;
                     padding: 15px;
+                    margin-left: auto;
                 }
             }
         }
