--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -35,6 +35,7 @@
         img {
             position: absolute;
             width: 580px;
+            max-width: 580px;
             bottom: 0;
             left: -75px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
