--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -156,12 +156,13 @@
             height: 0;
 
             img {
-                width: 100%;
+                display: none;
+          /*      width: 100%;
                 right: initial;
                 left: 76%;
                 bottom: -220px;
                 transform: translateX(-50%);
-                max-width: 345px;
+                max-width: 345px; */
             }
         }
         // abs icons
