--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -91,6 +91,9 @@
     align-items: center;
     background-color: #ffffff;
     padding: 4px 18px 4px 10px;
+    img {
+      width: 150px;
+    }
 }
 
 .nav-link {
