--- a/sass/newland/_sec_about_course.scss
+++ b/sass/newland/_sec_about_course.scss
@@ -65,6 +65,13 @@
                 margin-bottom: 30px;
             }
         }
+        li {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 160%;
+            color: #828282;
+            margin: 0;
+        }
     }
     // abs_pic
     .circle {
