--- a/sass/newland/_sec_goal.scss
+++ b/sass/newland/_sec_goal.scss
@@ -35,7 +35,19 @@
         margin-bottom: 19px;
     }
 
-    p {
+    p{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 153.59%;
+        color: #828282;
+        margin: 0;
+
+        &:not(:last-of-type) {
+            margin-bottom: 19px;
+        }
+    }
+
+    li{
         font-weight: 500;
         font-size: 16px;
         line-height: 153.59%;
