--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -88,12 +88,11 @@
 
 .navbar-brand {
     display: flex;
-    width: 135px;
     align-items: center;
     background-color: #ffffff;
-    padding: 3px 17px 5px 6px;
+    padding: 0px;
     img {
-      max-width: 120px;
+      max-width: 100px;
     }
 }
 
@@ -110,8 +109,6 @@
 }
 @media (max-width: 767.98px) {
     .navbar-brand {
-        padding-top: 3px;
-        padding-bottom: 5px;
     }
 
     .navbar .btn {
