--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -177,7 +177,7 @@
             display: -ms-flex;
             display: flex;
             justify-content: space-between;
-            align-items: flex-end;
+            align-items: flex-start;
             margin: 0;
 
             .right {
