--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -61,6 +61,7 @@
 
         .media-image {
             max-width: 100%;
+            width:300px;
         }
 
         .media.vertical {
@@ -177,7 +178,7 @@
             display: -ms-flex;
             display: flex;
             justify-content: space-between;
-            align-items: flex-end;
+            align-items: center;
             margin: 0;
 
             .right {
