--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -40,9 +40,9 @@
 
         img {
             position: absolute;
-            bottom: 0;
+            bottom: -50px;
             right: -40px;
-            width: 490px;
+            width: 390px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
