--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -43,8 +43,8 @@
         img {
             position: absolute;
             bottom: 0;
-            right: 0;
-            width: 413px;
+            right: -40px;
+            width: 540px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
@@ -156,7 +156,7 @@
                 right: initial;
                 left: 50%;
                 transform: translateX(-50%);
-                max-width: 200px;
+                max-width: 290px;
                 filter: none;
             }
         }
